# rs750

./: README.md
rs750_gazebo/: CMakeLists.txt  package.xml
rs750_gazebo/models/rs750_ges/: model.config  model.sdf
rs750_gazebo/models/rs750_ges/meshes/: thruster.dae
rs750_gazebo/models/vessel_a_mod/: model.config  model.sdf
rs750_gazebo/models/vessel_a_mod/meshes/: Boat05_blender.dae  vessel_collision.dae
rs750_gazebo/models/wam-v/: model.config  model.sdf
rs750_gazebo/models/waves_ges/: model.sdf
rs750_gazebo/src/: HydrokineticTurbine.cc  HydrokineticTurbine.hh  SailPositionControllerGES.cc  SailPositionControllerGES.hh
rs750_gazebo/worlds/: sailing_course.sdf  sailing_course_ges.sdf
rs750_ros/: CMakeLists.txt  package.xml
rs750_ros/launch/: rs750.launch.py
rs750_ros/msg/: Control.msg  VesselPose.msg
rs750_ros/scripts/: cmdline2topic.py  data_recorder.py  ges_battery.py  heading_control.py  pose_generator.py  sail_control.py  twist_to_rudder.py
